packages/vue-component-library/src/styles/ftva/_nav-primary.scss
.ftva.nav-primary.primary {
    position: relative; //absolutely positioned children will be relative to this
    overflow: visible; //allows the search button menu to overflow the container
    // this theme refactors to grid layout so we can place menu items over top of each other w/o absolute positioning
    display: grid;
    grid-template-columns: auto auto 64px;
    justify-content: unset;
    grid-auto-flow: dense;

    .support-links {
        .item-top {
            display: none;
        }
    }

    .background-blue {
        background-color: $navy-blue;
        border-bottom: none;
    }

    ul {
        background-color: $navy-blue;
    }

    .menu {
        left: 20px;
        right: 80px;
        position: absolute;
        display: flex;

        // add css 'wings' to fill sides of large screen with menu bg color
        &::after,
        &::before {
            display: block;
            overflow: visible;
            position: absolute;
            left: -500px;
            bottom: 0px;
            content: '';
            height: 100%;
            max-height: 400px;
            width: 500px;
            background-color: $navy-blue;
        }

        &::after {
            left: 100%;
        }

        .section-name {
            font-size: 20px;
        }
    }

    .more-menu {
        display: block;
        grid-column: 3;

        button:focus, a:focus {
            outline: none;
        }

        .search-button,
        .close-button,
        .more-menu-button {
            background: none;
            border: none;
            height: 64px;
            width: 65px;
            padding: unset;

            ::after {
                content: '';
                position: absolute;
                left: 0;
                bottom: -1px;
                opacity: 0; // use opacity to hide so we can animate it
                width: 100%;
                height: 5px;
                background-color: var(--ftva-medium-blue);
                margin-top: 5px;
                transition-property: opacity;
                transition-duration: $transition-timing-slow;
                transition-timing-function: ease-in-out;
            }

            &:hover, &:focus {
                ::after {
                    opacity: 1;
                }
            }

            :deep(.hover) {
                display: none;
            }

            :deep(.svg__fill--dark-navy) {
                fill: white;
            }

            :deep(.svg__stroke--primary-blue-03) {
                stroke: white;
            }
        }

        .search-button {
            position: relative; // required for z-index to work
            z-index: 1000;
          }

        .slot-container {
            display: block;
            position: absolute;
            z-index: 1;
            width: 100%;
            margin: 0;
            padding: 0;
            right: 0;
            background-color: $navy-blue;
            transform: scaleY(0);
            transform-origin: top;
            transition-duration: .2s;
            transition-timing-function: ease-in-out;

            // add css 'wings' to fill sides of large screen with menu bg color
            &::after,
            &::before {
                display: block;
                overflow: visible;
                position: absolute;
                left: -500px;
                bottom: 0px;
                content: '';
                height: 100%;
                max-height: 400px;
                width: 500px;
                background-color: $navy-blue;
            }

            &::after {
                left: 100%;
            }
            
            &.is-opened {
                transform: scaleY(1);
            }
        }

        .mobile-only {
            display: none;
        }
    }
    &.slot-is-opened > .more-menu { 
        .search-button {
            ::after {opacity: 1;}
        }
    }

    // MOBILE MENU STYLES
    @media #{$small} {
        display: flex;
        flex-direction: column;
        grid-auto-flow: unset;
        padding: 0 30px;

        &.is-opened-mobile {
            height: 100vh;
            overflow-y: scroll;
            overflow-x: hidden;
            padding-bottom: 110px; //offset for space behind floating donate button
        }

        .item-top-mobile {
            position: fixed; 
            top: 0px;
            color: white;
            line-height: 64px;
            font-size: 22px;
            margin-left: -10px;
            z-index: 25;
        }
        
        .nav-background-fill {
            display: block;
            position: fixed;
            top: 0;
            left: 0;
            width: 100%;
            height: 64px;
            background-color: $navy-blue;
            z-index: 15;
        }

        .more-menu {
            position: relative;
            display: flex;
            flex-direction: column;
            align-self: flex-end;
            gap: 12px;
            
            .search-button,
            .close-button,
            .more-menu-button {
                margin-left: auto;
                width: 23px;
                height: 64px;
                z-index: 25;

                svg {
                    width: 32px;
                    height: 36px;
                }

                ::after {
                    display: none;
                }
            }

            .search-button {
                position: absolute;
                right: 30px;
                top: -1px;

                svg {
                    width: 14px;
                    height: 14px;
                }
            }

            .close-button {
                position: -webkit-sticky;
                position: sticky;
                top: auto;
                right: 0;

                svg {
                    width: auto;
                    height: auto;
                }
            }

            .mobile-only {
                display: block;
            }

            .slot-container {
                transition-duration: 0s; // no transition on mobile
            }

            .slot-container.is-opened-mobile {
                position: relative;
                transform: scaleY(1);

                :deep(.nav-search) {
                    padding: 30px 0px;
                }
            }
        }

        .menu {
            // closed menu
            display: none;
            position: relative; 
            grid-column: 1 / span 3;
            width: 100%;

            :deep(.nav-menu-item),
            :deep(.nav-menu-item.is-opened) {
                width: 100%;
                max-width: 100%;
                border-bottom: 1px solid var(--ftva-medium-blue);

                ::after {
                    content: '';
                    position: absolute;
                    left: 0;
                    bottom: -1px;
                    opacity: 0; // use opacity to hide so we can animate it
                    width: 100%;
                    height: 5px;
                    background-color: var(--ftva-medium-blue);
                    margin-top: 5px;
                    transition-property: opacity;
                    transition-duration: $transition-timing-slow;
                    transition-timing-function: ease-in-out;
                }

                .section-name {
                    text-align: left;

                    &:hover {
                        &::after {
                            opacity: 0;
                        }
                    }
                }

                .sub-menu {
                    opacity: 0;
                    max-height: 0;

                    .sub-menu-item {
                        &:first-child {
                            margin-top: 0px;
                        }

                        &:last-child {
                            margin-bottom: 0px;
                        }

                        .sub-menu-link {
                            color: $grey-blue;
                            padding-right: 24px;
                            padding-left: 24px;
                            font-size: 18px;
                        }
                    }
                }
            }

            // icon in nav menu item slot
            .caret {
                position: absolute;
                top: 14px;
                right: 0;

                .chevron svg {
                    margin-right: -8px; //offset whitespace around icon

                    :deep(.svg__stroke--primary-blue-03) {
                        stroke: $grey-blue;
                    }
                }

                &.is-active>.chevron svg {
                    transform: rotate(180deg);
                }
            }

            // open menu
            &.is-opened-mobile {
                display: unset;

                :deep(.nav-menu-item) {
                    .section-name::after {
                        opacity: 0;
                    }

                    &.is-active {
                        .section-name {
                            &::after {
                                opacity: 0;
                            }
                        }

                        .sub-menu {
                            opacity: 1;
                            max-height: unset;
                            padding-bottom: 5px;
                        }
                    }
                }
            }
        }

        .mobile-menu-slot {
            display: block;
            // position: fixed;
            position: absolute;
            z-index: 25;
            bottom: 0;
            width: calc(100% - 60px);
            background-color: $navy-blue;
            background-color: red;
        }
    }
}

